  * mod_rewrite: fix compile error if compiled without pcre
  * disable warning "CLOSE-read" (fixes #2091)
  * mod_rrdtool: fix creating file if it doesn't exist (#1788)
  * reset tlsext_server_name in connection_reset - fixes random hostnames in the $HTTP["host"] conditional
  * export some SSL_CLIENT_* vars for client cert validation (fixes #1288, thx presbrey)

- 1.4.24 - 2009-10-25
  * Add T_CONFIG_INT for bigger integers from the config (needed for #1966)
  * Use unsigned int (and T_CONFIG_INT) for max_request_size
  * Use unsigned int for secdownload.timeout (fixes #1966)
  * Keep url/host values from connection to display information while keep-alive in mod_status (fixes #1202)
  * Add server.breakagelog, a "special" stderr (fixes #1863)
  * Fix config evaluation for debug.log-timeouts option (#1529)
  * Add "cgi.execute-x-only" to mod_cgi, requires +x for cgi scripts (fixes #2013)
  * Fix FD_SETSIZE comparision warnings
  * Add "lua-5.1" to searched pkg-config names for lua
  * Fix unused function webdav_lockdiscovery in mod_webdav
  * cmake: Fix crypt lib check
  * cmake: Add -export-dynamic to link flags, fixes build on FreeBSD
  * Set FD_CLOEXEC for bound sockets before pipe-logger forks (fixes #2026)
  * Reset ignored signals to SIG_DFL before exec() in fastcgi/scgi (fixes #2029)
  * Show "no uri specified -> 400" error only when "debug.log-request-header-on-error" is enabled (fixes #2030)
  * Fix hanging connection in mod_scgi (fixes #2024)
  * Allow digits in hostnames in more places (fixes #1148)
  * Use connection_reset instead of handle_request_done for cleanup callbacks
  * Change mod_expire to append Cache-Control instead of overwriting it (fixes #1997)
  * Allow all comparisons for $SERVER["socket"] - only bind for "=="
  * Remove strptime failed message (fixes #2031)
  * Fix issues found with clang analyzer
  * Try to fix server.tag issue with localized svnversion
  * Fix handling network-write return values (#2024)