@@ -11,6 +11,7 @@ NEWS
   * mod_rrdtool: fix creating file if it doesn't exist (#1788)
   * reset tlsext_server_name in connection_reset - fixes random hostnames in the $HTTP["host"] conditional
   * export some SSL_CLIENT_* vars for client cert validation (fixes #1288, thx presbrey)
+  * mod_fastcgi: fix mod_fastcgi packet parsing
 
 - 1.4.24 - 2009-10-25
   * Add T_CONFIG_INT for bigger integers from the config (needed for #1966)
